Project

General

Profile

Actions

Bug #47357

closed

access invalid optional in ReplicatedRecoveryBackend::handle_recovery_op()

Added by Kefu Chai over 3 years ago. Updated over 3 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

osd.0

void seastar::backtrace<seastar::backtrace_buffer::append_backtrace()::{lambda(seastar::frame)#1}>(seastar::backtrace_buffer::append_backtrace()::{lambda(seastar::frame)#1}&&) at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/include/seastar/util/backtrace.hh:59
non-virtual thunk to std::_Nested_exception<std::runtime_error>::~_Nested_exception() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:730
 (inlined by) print_with_backtrace at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:751
print_with_backtrace at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:758
non-virtual thunk to std::_Nested_exception<std::runtime_error>::~_Nested_exception() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:3517
 (inlined by) operator() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:3499
 (inlined by) _FUN at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:3495
.annobin_funlockfile.c_end at funlockfile.c:?
__GI___libc_sigaction at :?
__isoc99_fscanf.cold.0 at isoc99_fscanf.c:?
std::__replacement_assert(char const*, int, char const*, char const*) at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/x86_64-redhat-linux/bits/c++config.h:2533
ReplicatedRecoveryBackend::handle_recovery_op(boost::intrusive_ptr<MOSDFastDispatchOp>) at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/optional:438
 (inlined by) ?? at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/optional:894
 (inlined by) operator() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/crimson/osd/replicated_recovery_backend.cc:65
ReplicatedRecoveryBackend::handle_recovery_op(boost::intrusive_ptr<MOSDFastDispatchOp>) at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/bits/invoke.h:60
 (inlined by) ?? at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/bits/invoke.h:96
 (inlined by) ?? at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/tuple:1685
 (inlined by) ?? at /opt/rh/gcc-toolset-9/root/usr/include/c++/9/tuple:1696
 (inlined by) operator() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/include/seastar/core/future.hh:1551
 (inlined by) ?? at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/include/seastar/core/future.hh:2038
 (inlined by) operator() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/include/seastar/core/future.hh:1550
 (inlined by) run_and_dispose at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/include/seastar/core/future.hh:648
seastar::reactor::run_tasks(seastar::reactor::task_queue&) at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:2192
non-virtual thunk to std::_Nested_exception<std::runtime_error>::~_Nested_exception() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:2608
non-virtual thunk to std::_Nested_exception<std::runtime_error>::~_Nested_exception() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:2591
 (inlined by) seastar::reactor::run() at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/reactor.cc:2763
seastar::app_template::run_deprecated(int, char**, std::function<void ()>&&) at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/seastar/src/core/app-template.cc:207
main at /usr/src/debug/ceph-16.0.0-5237.g056d8776ce.el8.x86_64/src/crimson/osd/main.cc:147
check_one_fd at check_fds.c:?
_start at ??:?

https://pulpito.ceph.com/kchai-2020-09-08_07:02:59-crimson-rados:thrash-master-distro-basic-smithi/5417090/


Files

47357-osd-0-1.tbz (760 KB) 47357-osd-0-1.tbz Kefu Chai, 09/08/2020 08:53 AM
ceph-osd.3.log.bz2 (945 KB) ceph-osd.3.log.bz2 Kefu Chai, 09/08/2020 08:55 AM
ceph-osd.2.log.bz2 (272 KB) ceph-osd.2.log.bz2 Kefu Chai, 09/08/2020 08:55 AM
Actions #1

Updated by Kefu Chai over 3 years ago

  • Description updated (diff)
Actions #2

Updated by Kefu Chai over 3 years ago

  • Description updated (diff)
Actions #5

Updated by Kefu Chai over 3 years ago

  • Status changed from New to Fix Under Review
  • Assignee set to Xuehan Xu
  • Pull request ID set to 37042
Actions #6

Updated by Kefu Chai over 3 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF